--- a/web/components/Views/HomeView/WhyUs/WhyUs.module.scss
+++ b/web/components/Views/HomeView/WhyUs/WhyUs.module.scss
@@ -7,9 +7,10 @@
 }
 
 .image__wrapper {
+    background: pink;
     aspect-ratio: 1/1;
     background-color: color-mix(in srgb, $aqua 40%, $white 60%);
-    border-radius: 50%;
+    // border-radius: 50%;
     position: relative;
     display: block;
     margin:2rem 0 1rem auto;
@@ -23,6 +24,7 @@
 }
 
 .box {
+    background: silver;
     padding: 0rem 2.3rem;
 }
 
